[tool.towncrier]
package = "HolisticHealth"
package_dir = "HolisticHealth"
directory = "changes"
filename = "CHANGELOG.rst"
issue_format = "`#{issue} <https://github.com/HolisticHealthWiki/HolisticHealth/issues/{issue}>`_"
type = [
    { name = "Breaking Changes",            directory = "breaking",     showcontent = true },
    { name = "Deprecation",                 directory = "deprecation",  showcontent = true },
    { name = "Features",                    directory = "feature",      showcontent = true },
    { name = "Bugfixes",                    directory = "bugfix",       showcontent = true },
    { name = "Documentation Improvements",  directory = "doc",          showcontent = true },
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --strict-markers --ignore=docs/conf.py --ignore=setup.py --ignore=benchmark --ignore=ci --ignore=.eggs --doctest-modules --doctest-glob=/*.py --tb=short"
norecursedirs = [
	".git",
	".tox",
	".env",
	"dist",
	"build",
	"migrations"
]
testpaths = [
    "tests"
]
python_files = [
	"test_*.py",
	"*_test.py",
	"tests.py"
]
doctest_optionflags = "NUMBER"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "dynaconf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "HolisticHealth.config"
ignore_missing_imports = true

[project]
name = "HolisticHealth"
version = "0.1.0"
authors = [
    {name = "Vivek Joshy", email = "vivek@opendebates.net"},
]
maintainers = [
  {name = "Vivek Joshy", email = "vivek@opendebates.net"}
]
description = "Supervised Diagnostic Inference Engine"
readme = "README.md"
requires-python = "~=3.8"
keywords = ["medicine", "diagnosis", "symptoms", "ai", "doctors", "treatment"]
license = {text = "AGPL-3.0"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
	"Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "fastapi~=0.104.0",
    "uvicorn[standard]~=0.23.2",
    "dynaconf~=3.2.3",
    "loguru~=0.7.2",
    "sentry-sdk~=1.32.0",
]

[project.urls]
Documentation = "https://docs.holistichealth.wiki/en/stable"
Changelog = "https://github.com/HolisticHealthWiki/HolisticHealth/blob/main/CHANGELOG.rst"
Funding = "https://github.com/sponsors/HolisticHealthWiki"
Source = "https://github.com/HolisticHealthWiki/HolisticHealth"
Tracker = "https://github.com/HolisticHealthWiki/HolisticHealth/issues"

[tool.pdm.dev-dependencies]
docs = [
    "sphinx~=7.0",
    "pygments~=2.15",
    "shibuya~=2023.7",
    "ipykernel~=6.25",
    "myst-parser~=2.0",
    "sphinx-intl~=2.1",
    "sphinx-favicon~=1.0",
    "sphinx-copybutton~=0.5",
    "sphinx-autoapi~=2.1.1",
    "sphinxext-opengraph~=0.8",
    "sphinxcontrib-bibtex~=2.5.0",
    "sphinx-autodoc-typehints~=1.24.0",
]
tests = [
    "tox~=4.6",
    "mypy~=1.4.1",
    "pytest~=7.3",
    "coverage~=7.2",
    "pytest-cov~=4.0",
    "httpx~=0.25.0"
]
release = [
    "twine~=4.0",
    "build~=0.10",
    "isort~=5.12",
    "black[jupyter]~=23.7",
    "codecov~=2.1",
    "towncrier~=23.6",
    "bump-my-version~=0.9.2",
]

[tool.pdm.build]
includes = ["HolisticHealth/", "LICENSE", "README.md", "CHANGELOG.rst"]
is-purelib = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
